@@ -19,6 +19,7 @@ package org.jkiss.dbeaver.model.sql.semantics.completion;
 import org.antlr.v4.runtime.misc.Interval;
 import org.eclipse.jface.text.BadLocationException;
 import org.eclipse.jface.text.IDocument;
+import org.eclipse.jface.text.IRegion;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
@@ -29,24 +30,25 @@ import org.jkiss.dbeaver.model.exec.DBCExecutionContext;
 import org.jkiss.dbeaver.model.exec.DBCExecutionContextDefaults;
 import org.jkiss.dbeaver.model.lsm.sql.impl.syntax.SQLStandardLexer;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
+import org.jkiss.dbeaver.model.runtime.VoidProgressMonitor;
 import org.jkiss.dbeaver.model.sql.SQLSearchUtils;
 import org.jkiss.dbeaver.model.sql.completion.SQLCompletionRequest;
 import org.jkiss.dbeaver.model.sql.semantics.*;
+import org.jkiss.dbeaver.model.sql.semantics.context.SQLQueryCombinedContext;
 import org.jkiss.dbeaver.model.sql.semantics.context.SQLQueryDataContext;
 import org.jkiss.dbeaver.model.sql.semantics.context.SQLQueryResultColumn;
 import org.jkiss.dbeaver.model.sql.semantics.context.SourceResolutionResult;
+import org.jkiss.dbeaver.model.sql.semantics.model.SQLQueryModel;
 import org.jkiss.dbeaver.model.stm.LSMInspections;
 import org.jkiss.dbeaver.model.stm.STMTreeTermNode;
 import org.jkiss.dbeaver.model.struct.*;
-import org.jkiss.dbeaver.model.struct.rdb.DBSCatalog;
-import org.jkiss.dbeaver.model.struct.rdb.DBSSchema;
-import org.jkiss.dbeaver.model.struct.rdb.DBSTable;
-import org.jkiss.dbeaver.model.struct.rdb.DBSView;
+import org.jkiss.dbeaver.model.struct.rdb.*;
 import org.jkiss.utils.Pair;
 
 import java.util.*;
 import java.util.function.BiFunction;
 import java.util.function.Predicate;
+import java.util.regex.MatchResult;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -56,7 +58,7 @@ public abstract class SQLQueryCompletionContext {
 
     private static final Log log = Log.getLog(SQLQueryCompletionContext.class);
 
-    private static final Set<String> statementStartKeywords = LSMInspections.prepareOffquerySyntaxInspection().predictedWords;
+    private static final Set<String> statementStartKeywords = LSMInspections.prepareOffquerySyntaxInspection().predictedWords();
     private static final int statementStartKeywordMaxLength = statementStartKeywords.stream().mapToInt(String::length).max().orElse(0);
 
     private static final Set<SQLQuerySymbolClass> potentialKeywordPartClassification = Set.of(
@@ -92,11 +94,11 @@ public abstract class SQLQueryCompletionContext {
 
             @NotNull
             @Override
-            public SQLQueryCompletionSet prepareProposal(
+            public Collection<SQLQueryCompletionSet> prepareProposal(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull SQLCompletionRequest request
             ) {
-                return new SQLQueryCompletionSet(getRequestOffset(), 0, Collections.emptyList());
+                return List.of(new SQLQueryCompletionSet(getRequestOffset(), 0, Collections.emptyList()));
             }
         };
     }
@@ -108,7 +110,7 @@ public abstract class SQLQueryCompletionContext {
     public static SQLQueryCompletionContext prepareOffquery(int scriptItemOffset, int requestOffset) {
         return new SQLQueryCompletionContext(scriptItemOffset, requestOffset) {
             private static final LSMInspections.SyntaxInspectionResult syntaxInspectionResult = LSMInspections.prepareOffquerySyntaxInspection();
-            private static Pattern KEYWORD_FILTER_PATTERN = Pattern.compile("[a-zA-Z0-9]+$");
+            private static final Pattern KEYWORD_FILTER_PATTERN = Pattern.compile("([a-zA-Z0-9]+)");
 
             @Nullable
             @Override
@@ -124,41 +126,42 @@ public abstract class SQLQueryCompletionContext {
 
             @NotNull
             @Override
-            public SQLQueryCompletionSet prepareProposal(
+            public Collection<SQLQueryCompletionSet> prepareProposal(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull SQLCompletionRequest request
             ) {
                 int lineStartOffset;
-                String lineHead;
+                String lineText;
                 try {
                     IDocument doc = request.getDocument();
-                    int line = doc.getLineOfOffset(this.getRequestOffset());
-                    lineStartOffset = doc.getLineOffset(line);
-                    lineHead = doc.get(lineStartOffset, this.getRequestOffset() - lineStartOffset);
+                    IRegion lineInfo = doc.getLineInformationOfOffset(this.getRequestOffset());
+                    lineStartOffset = lineInfo.getOffset();
+                    lineText = doc.get(lineStartOffset, lineInfo.getLength());
                 } catch (BadLocationException ex) {
-                    lineHead = "";
                     lineStartOffset = -1;
+                    lineText = "";
                 }
 
-                Matcher m = KEYWORD_FILTER_PATTERN.matcher(lineHead);
-                Collection<SQLQueryCompletionItem> keywordCompletions;
-                int replacementLength;
-                if (m.find()) {
-                    String filterKeyString = lineHead.substring(m.start(), m.end()).toLowerCase();
-                    int filterStart = m.start() + lineStartOffset;
-                    replacementLength = filterKeyString.length();
-                    keywordCompletions = statementStartKeywords.stream()
-                        .map(s -> SQLQueryCompletionItem.forReservedWord(new SQLQueryWordEntry(filterStart, s), s))
-                        .filter(c -> c.getFilterInfo().filterString.contains(filterKeyString))
-                        .toList();
-                } else {
-                    replacementLength = 0;
-                    keywordCompletions = statementStartKeywords.stream()
-                        .map(s -> SQLQueryCompletionItem.forReservedWord(new SQLQueryWordEntry(-1, s), s))
-                        .toList();
+                // First keyword handling, when there is no query model
+                Matcher m = KEYWORD_FILTER_PATTERN.matcher(lineText);
+                SQLQueryWordEntry filter = null;
+                if (m.find() && lineStartOffset >= 0) {
+                    MatchResult mr = m.toMatchResult();
+                    int inLineOffset = this.getRequestOffset() - lineStartOffset;
+                    for (int i = 0; i < mr.groupCount(); i++) {
+                        int start = mr.start(i);
+                        int end = mr.end(i);
+                        if (start <= inLineOffset && end >= inLineOffset) {
+                            String filterKeyString = lineText.substring(m.start(), m.end()).toLowerCase();
+                            int filterStart = start + lineStartOffset - scriptItemOffset;
+                            filter = new SQLQueryWordEntry(filterStart, filterKeyString);
+                            break;
+                        }
+                    }
                 }
 
-                return new SQLQueryCompletionSet(this.getRequestOffset() - replacementLength, replacementLength, keywordCompletions);
+                SQLQueryCompletionSet keywordCompletions = this.prepareKeywordCompletions(statementStartKeywords, filter);
+                return List.of(keywordCompletions);
             }
         };
     }
@@ -207,7 +210,7 @@ public abstract class SQLQueryCompletionContext {
      * Prepare a set of completion proposal items for a given position in the text of the script item
      */
     @NotNull
-    public abstract SQLQueryCompletionSet prepareProposal(
+    public abstract Collection<SQLQueryCompletionSet> prepareProposal(
         @NotNull DBRProgressMonitor monitor,
         @NotNull SQLCompletionRequest request
     );
@@ -225,19 +228,20 @@ public abstract class SQLQueryCompletionContext {
         int requestOffset,
         @Nullable DBCExecutionContext dbcExecutionContext,
         @NotNull LSMInspections.SyntaxInspectionResult syntaxInspectionResult,
-        @NotNull SQLQueryDataContext context,
+        @NotNull SQLQueryModel.LexicalContextResolutionResult context,
         @Nullable SQLQueryLexicalScopeItem lexicalItem,
         @NotNull STMTreeTermNode[] nameNodes,
-        boolean hasPeriod
+        boolean hasPeriod,
+        @Nullable STMTreeTermNode currentTerm
     ) {
         return new SQLQueryCompletionContext(scriptItem.offset, requestOffset) {
             private final Set<DBSObjectContainer> exposedContexts = SQLQueryCompletionContext.obtainExposedContexts(dbcExecutionContext);
-            private final SQLQueryDataContext.KnownSourcesInfo knownSources = context.collectKnownSources();
+            private final SQLQueryDataContext.KnownSourcesInfo knownSources = context.deepestContext().collectKnownSources();
 
             @NotNull
             @Override
             public SQLQueryDataContext getDataContext() {
-                return context;
+                return context.deepestContext();
             }
 
             @NotNull
@@ -249,7 +253,7 @@ public abstract class SQLQueryCompletionContext {
             @NotNull
             @Override
             public Set<String> getAliasesInUse() {
-                return this.knownSources.getAliasesInUse();
+                return context.nearestResultContext().collectKnownSources().getAliasesInUse();
             }
 
             @NotNull
@@ -260,58 +264,57 @@ public abstract class SQLQueryCompletionContext {
 
             @NotNull
             @Override
-            public SQLQueryCompletionSet prepareProposal(
+            public Collection<SQLQueryCompletionSet> prepareProposal(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull SQLCompletionRequest request
             ) {
                 int position = this.getRequestOffset() - this.getOffset();
                 
-                SQLQueryWordEntry currentWord = this.obtainCurrentWord(position);
+                SQLQueryWordEntry currentWord = this.obtainCurrentWord(currentTerm, position);
                 List<SQLQueryWordEntry> parts = this.obtainIdentifierParts(position);
 
                 boolean keywordsAllowed = (lexicalItem == null || potentialKeywordPartClassification.contains(lexicalItem.getSymbolClass())) && !hasPeriod;
-                final List<SQLQueryCompletionItem> keywordCompletions = keywordsAllowed
-                    ? prepareKeywordCompletions(syntaxInspectionResult.predictedWords, currentWord)
-                    : Collections.emptyList();
+                SQLQueryCompletionSet keywordCompletions = keywordsAllowed
+                    ? prepareKeywordCompletions(syntaxInspectionResult.predictedWords(), currentWord)
+                    : null;
 
-                List<SQLQueryCompletionItem> columnRefCompletions = syntaxInspectionResult.expectingColumnReference && nameNodes.length == 0
-                    ? this.prepareColumnCompletions(null)
-                    : Collections.emptyList();
+                SQLQueryCompletionSet columnRefCompletions = syntaxInspectionResult.expectingColumnReference() && nameNodes.length == 0
+                    ? this.prepareColumnCompletions(monitor, null)
+                    : null;
 
-                List<SQLQueryCompletionItem> tableRefCompletions = syntaxInspectionResult.expectingTableReference && nameNodes.length == 0
+                SQLQueryCompletionSet tableRefCompletions = syntaxInspectionResult.expectingTableReference() && nameNodes.length == 0
                     ? this.prepareTableCompletions(monitor, request, null)
-                    : Collections.emptyList();
-                
-                List<SQLQueryCompletionItem> lexicalItemCompletions = lexicalItem != null
+                    : null;
+
+                SQLQueryCompletionSet lexicalItemCompletions = lexicalItem != null
                     ? this.prepareLexicalItemCompletions(monitor, request, lexicalItem, position)
-                    : syntaxInspectionResult.expectingIdentifier || nameNodes.length > 0 && (parts.size() > 1 || (parts.size() == 1 && parts.get(0) != null))
+                    : syntaxInspectionResult.expectingIdentifier() || nameNodes.length > 0 && (parts.size() > 1 || (parts.size() == 1 && parts.get(0) != null))
                         ? this.prepareInspectedIdentifierCompletions(monitor, request, parts)
-                        : Collections.emptyList();
-                
-                List<SQLQueryCompletionItem> completionItems = Stream.of(
-                    columnRefCompletions, tableRefCompletions, lexicalItemCompletions, keywordCompletions)
-                    .flatMap(Collection::stream)
+                        : null;
+
+                List<SQLQueryCompletionSet> completionSets = Stream.of(
+                        columnRefCompletions, tableRefCompletions, lexicalItemCompletions, keywordCompletions)
+                    .filter(s -> s != null && s.getItems().size() > 0)
                     .collect(Collectors.toList());
 
-                int replacementPosition = !keywordsAllowed && (parts.size() > 0 && parts.get(0) != null) ? parts.get(0).offset : position;
-                return new SQLQueryCompletionSet(this.getOffset() + replacementPosition, position - replacementPosition, completionItems);
+                return completionSets;
             }
 
             @Nullable
-            private SQLQueryWordEntry obtainCurrentWord(int position) {
-                if (nameNodes.length == 0) {
+            private SQLQueryWordEntry obtainCurrentWord(STMTreeTermNode currentTerm, int position) {
+                if (currentTerm == null) {
                     return null;
                 }
-                STMTreeTermNode lastNode = nameNodes[nameNodes.length - 1];
-                Interval wordRange = lastNode.getRealInterval();
-                if (wordRange.b >= position - 1 && lastNode.symbol.getType() != SQLStandardLexer.Period) {
-                    return new SQLQueryWordEntry(wordRange.a, lastNode.getTextContent().substring(0, position - lastNode.getRealInterval().a));
+                Interval wordRange = currentTerm.getRealInterval();
+                if (wordRange.b >= position - 1 && currentTerm.symbol.getType() != SQLStandardLexer.Period) {
+                    return new SQLQueryWordEntry(wordRange.a, currentTerm.getTextContent().substring(0, position - currentTerm.getRealInterval().a));
                 } else {
                     return null;
                 }
             }
-            
-            private List<SQLQueryCompletionItem> prepareInspectedIdentifierCompletions(
+
+            @Nullable
+            private SQLQueryCompletionSet prepareInspectedIdentifierCompletions(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull SQLCompletionRequest request,
                 @NotNull List<SQLQueryWordEntry> parts
@@ -329,62 +332,57 @@ public abstract class SQLQueryCompletionContext {
                     }
                 }
 
-                List<SQLQueryCompletionItem> result;
-                if (syntaxInspectionResult.expectingColumnReference) {
+                SQLQueryCompletionSet result;
+                if (syntaxInspectionResult.expectingColumnReference()) {
                     result = this.accomplishColumnReference(monitor, prefix, tail);
-                } else if (syntaxInspectionResult.expectingTableReference) {
+                } else if (syntaxInspectionResult.expectingTableReference()) {
                     result = this.accomplishTableReference(monitor, request, prefix, tail);
                 } else {
-                    result = Collections.emptyList();
+                    result = null;
                 }
 
                 return result;
             }
 
-            @NotNull
-            private List<SQLQueryCompletionItem> accomplishTableReference(
+            @Nullable
+            private SQLQueryCompletionSet accomplishTableReference(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull SQLCompletionRequest request,
                 @NotNull List<SQLQueryWordEntry> prefix,
                 @Nullable SQLQueryWordEntry tail
             ) {
                 if (dbcExecutionContext == null || dbcExecutionContext.getDataSource() == null || !DBStructUtils.isConnectedContainer(dbcExecutionContext.getDataSource())) {
-                    return Collections.emptyList();
+                    return null;
                 } else if (prefix.isEmpty()) {
                     return this.prepareTableCompletions(monitor, request, tail);
                 } else {
                     List<String> contextName = prefix.stream().map(e -> e.string).collect(Collectors.toList());
-                    DBSObject prefixContext = prefix.isEmpty()
-                        ? DBUtils.getSelectedObject(dbcExecutionContext)
-                        : SQLSearchUtils.findObjectByFQN(
-                            monitor,
-                            (DBSObjectContainer) dbcExecutionContext.getDataSource(),
-                            dbcExecutionContext,
-                            contextName,
-                            false,
-                            request.getWordDetector()
-                        );
-
-//                        List<SQLQueryCompletionItem> items = this.prepareObjectComponentCompletions(
-//                            monitor, prefixContext, tail, List.of(DBSTable.class, DBSView.class),
-//                            (e, x) -> SQLQueryCompletionItem.forRealTable(e, x, knownSources.getReferencedTables().contains(x))
-//                        );
+                    DBSObject prefixContext = SQLSearchUtils.findObjectByFQN(
+                        monitor,
+                        (DBSObjectContainer) dbcExecutionContext.getDataSource(),
+                        dbcExecutionContext,
+                        contextName,
+                        false,
+                        request.getWordDetector()
+                    );
 
                     LinkedList<SQLQueryCompletionItem> items = new LinkedList<>();
                     if (prefixContext instanceof DBSObjectContainer container) {
+                        SQLQueryCompletionItem.ContextObjectInfo
+                            contextObject = this.prepareContextInfo(request, prefix, tail, prefixContext);
                         try {
-                            this.collectTables(monitor, container, tail, items);
-                            this.collectContextSchemasAndCatalogs(List.of(container), monitor, tail, items);
+                            this.collectTables(monitor, container, contextObject, tail, items);
+                            this.collectContextSchemasAndCatalogs(monitor, List.of(container), contextObject, tail, items);
                         } catch (DBException e) {
                             log.error(e);
                         }
                     }
-                    return items;
+                    return this.makeFilteredCompletionSet(prefix.isEmpty() ? tail : prefix.get(0), items);
                 }
             }
 
             @NotNull
-            private List<SQLQueryCompletionItem> accomplishColumnReference(
+            private SQLQueryCompletionSet accomplishColumnReference(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull List<SQLQueryWordEntry> prefix,
                 @Nullable SQLQueryWordEntry tail
@@ -394,9 +392,6 @@ public abstract class SQLQueryCompletionContext {
 
                     List<String> tableName = prefix.stream().map(w -> w.string).toList();
                     SourceResolutionResult referencedSource = this.getDataContext().resolveSource(monitor, tableName);
-                    if (referencedSource != null) {
-                        sourcePredicates.add(srr -> srr.source == referencedSource.source);
-                    }
 
                     if (prefix.size() == 1) {
                         SQLQueryWordEntry mayBeAliasName = prefix.get(0);
@@ -405,7 +400,7 @@ public abstract class SQLQueryCompletionContext {
 
                     sourcePredicates.add(srr -> {
                         if (srr.tableOrNull != null) {
-                            List<String> parts = SQLQueryCompletionItem.prepareQualifiedNameParts(srr.tableOrNull);
+                            List<String> parts = SQLQueryCompletionItem.prepareQualifiedNameParts(srr.tableOrNull, null);
                             int partsMatched = 0;
                             for (int i = prefix.size() - 1, j = parts.size() - 1; i >= 0 && j >= 0; i--, j--) {
                                 if (parts.get(j).toLowerCase().contains(prefix.get(i).filterString)) {
@@ -418,45 +413,46 @@ public abstract class SQLQueryCompletionContext {
                         }
                     });
 
+                    List<Pair<SourceResolutionResult, Boolean>> srr2 = this.knownSources.getResolutionResults().values().stream()
+                        .map(rr -> {
+                            if (referencedSource != null && rr.source == referencedSource.source) {
+                                return Pair.of(rr, true);
+                            } else {
+                                return sourcePredicates.stream().anyMatch(p -> p.test(rr)) ? Pair.of(rr, false) : null;
+                            }
+                        }).filter(Objects::nonNull).toList();
 
-                    List<SourceResolutionResult> srr2 = this.knownSources.getResolutionResults().values().stream()
-                        .filter(rr -> sourcePredicates.stream().anyMatch(p -> p.test(rr))).toList();
-
-                    List< SQLQueryCompletionItem> cols = srr2.stream().flatMap(srr -> srr.source.getResultDataContext().getColumnsList().stream()
-                        .map(c -> SQLQueryCompletionItem.forSubsetColumn(makeFilterInfo(tail, c.symbol.getName()), c, srr, false))
+                    List<SQLQueryCompletionItem.SQLColumnNameCompletionItem> cols = srr2.stream().flatMap(
+                        srr -> srr.getFirst().source.getResultDataContext().getColumnsList().stream()
+                            .map(c -> SQLQueryCompletionItem.forSubsetColumn(
+                                makeFilterInfo(tail, c.symbol.getName()), c, srr.getFirst(), srr.getSecond()
+                            ))
                     ).toList();
 
-                    List<SQLQueryCompletionItem> items = cols.stream().filter(c -> tail == null || c.getFilterInfo().filterString.contains(tail.filterString))
+                    List<SQLQueryCompletionItem.SQLColumnNameCompletionItem> items = cols.stream()
+                        .filter(c -> tail == null || c.getFilterInfo().filterString.contains(tail.filterString))
                         .toList();
 
-                    return items;
-
-//                    return this.knownSources.getResolutionResults().values().stream()
-//                        .filter(rr -> sourcePredicates.stream().anyMatch(p -> p.test(rr)))
-//                        .flatMap(srr -> srr.source.getResultDataContext().getColumnsList().stream()
-//                            .map(c -> SQLQueryCompletionItem.forSubsetColumn(makeFilterInfo(tail, c.symbol.getName()), c, srr, false))
-//                            .filter(c -> tail == null || c.getFilterInfo().filterString.contains(tail.filterString))
-//                        ).toList();
-                } else if (prefix.size() == 0) { // table-ref not introduced yet or non-prefixed column, so try both cases
-                    return this.prepareColumnCompletions(tail);
+                    return this.makeFilteredCompletionSet(prefix.get(0), items);
+                } else { // table-ref not introduced yet or non-prefixed column, so try both cases
+                    return this.prepareColumnCompletions(monitor, tail);
                 }
-                return Collections.emptyList();
             }
 
-            @NotNull
-            private List<SQLQueryCompletionItem> prepareObjectComponentCompletions(
+            @Nullable
+            private SQLQueryCompletionSet prepareObjectComponentCompletions(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull DBSObject object,
                 @NotNull SQLQueryWordEntry componentNamePart,
                 @NotNull List<Class<? extends DBSObject>> componentTypes
             ) {
-                return prepareObjectComponentCompletions(
-                    monitor, object, componentNamePart, componentTypes, SQLQueryCompletionItem::forDbObject
+                return this.prepareObjectComponentCompletions(
+                    monitor, object, componentNamePart, componentTypes, (e, o) -> SQLQueryCompletionItem.forDbObject(e, null, o)
                 );
             }
 
-            @NotNull
-            private <T extends DBSObject> List<SQLQueryCompletionItem> prepareObjectComponentCompletions(
+            @Nullable
+            private <T extends DBSObject> SQLQueryCompletionSet prepareObjectComponentCompletions(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull DBSObject object,
                 @Nullable SQLQueryWordEntry componentNamePart,
@@ -478,14 +474,15 @@ public abstract class SQLQueryCompletionContext {
                         components = Stream.empty();
                     }
 
-                    return components.filter(a -> componentTypes.stream().anyMatch(t -> t.isInstance(a)))
+                    List<SQLQueryCompletionItem> items = components.filter(a -> componentTypes.stream().anyMatch(t -> t.isInstance(a)))
                             .map(o -> Pair.of(makeFilterInfo(componentNamePart, o.getName()), o))
                             .filter(p -> componentNamePart == null || p.getFirst().filterString.contains(componentNamePart.filterString))
                         .map(p -> queryCompletionItemProvider.apply(p.getFirst(), (T) p.getSecond()))
                         .toList();
+                    return this.makeFilteredCompletionSet(componentNamePart, items);
                 } catch (DBException ex) {
                     log.error(ex);
-                    return Collections.emptyList();
+                    return null;
                 }
             }
 
@@ -517,7 +514,8 @@ public abstract class SQLQueryCompletionContext {
                 return def;
             }
 
-            private List<SQLQueryCompletionItem> prepareLexicalItemCompletions(
+            @Nullable
+            private SQLQueryCompletionSet prepareLexicalItemCompletions(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull SQLCompletionRequest request,
                 @NotNull SQLQueryLexicalScopeItem lexicalItem,
@@ -542,7 +540,7 @@ public abstract class SQLQueryCompletionContext {
                                 return this.prepareObjectComponentCompletions(monitor, byObjDef.getDbObject(), part, List.of(DBSEntity.class));
                             } else {
                                 // schema was not resolved, so cannot accomplish its subitems
-                                return Collections.emptyList();
+                                return null;
                             }
                         } else {
                             return this.prepareInspectedIdentifierCompletions(monitor, request, List.of(part));
@@ -557,7 +555,7 @@ public abstract class SQLQueryCompletionContext {
                                 return this.prepareObjectComponentCompletions(monitor, byObjDef.getDbObject(), part, List.of(DBSSchema.class));
                             } else {
                                 // catalog was not resolved, so cannot accomplish schema
-                                return Collections.emptyList();
+                                return null;
                             }
                         } else {
                             return this.prepareObjectComponentCompletions(
@@ -583,19 +581,100 @@ public abstract class SQLQueryCompletionContext {
                     throw new UnsupportedOperationException("Unexpected lexical item kind to complete " + lexicalItem.getClass().getName());
                 }
             }
-            
-            private List<SQLQueryCompletionItem> prepareKeywordCompletions(@NotNull Set<String> keywords, @Nullable SQLQueryWordEntry filter) {
-                Stream<SQLQueryCompletionItem> stream = keywords.stream().map(
-                    s -> SQLQueryCompletionItem.forReservedWord(makeFilterInfo(filter, s), s)
-                );
-                if (filter != null) {
-                    stream = stream.filter(s -> s.getFilterInfo().filterString.contains(filter.filterString));
+
+            private List<SQLQueryCompletionItem> prepareJoinConditionCompletions(
+                @NotNull DBRProgressMonitor monitor,
+                @Nullable SQLQueryWordEntry filterOrNull
+            ) {
+                class AssociationsResolutionContext {
+                    public final Map<DBSEntityAttribute, List<SQLQueryCompletionItem.SQLColumnNameCompletionItem>> realColumnRefsByEntityAttribute = context.deepestContext().getColumnsList().stream()
+                        .filter(rc -> rc.realAttr != null && rc.realAttr.getParentObject() == rc.realSource)
+                        .collect(Collectors.groupingBy(rc -> rc.realAttr)).entrySet().stream()
+                        .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, g -> g.getValue().stream().map(
+                            rc -> SQLQueryCompletionItem.forSubsetColumn(
+                                makeFilterInfo(null, rc.symbol.getName()), rc, knownSources.getResolutionResults().get(rc.source), false
+                            )
+                        ).toList()));
+
+                    private final Map<DBSEntity, Map<DBSEntityAttribute, List<DBSEntityAttribute>>> associatedAttrsByEntity = new HashMap<>();
+
+                    public List<DBSEntityAttribute> findAssociations(DBSEntityAttribute key) {
+                        return Optional.ofNullable(this.associatedAttrsByEntity.computeIfAbsent(key.getParentObject(), this::prepareAllAssociations).get(key)).orElse(Collections.emptyList());
+                    }
+
+                    private Map<DBSEntityAttribute, List<DBSEntityAttribute>> prepareAllAssociations(DBSEntity entity) {
+                        try {
+                            return Stream.concat(
+                                Optional.ofNullable(entity.getAssociations(monitor)).stream().flatMap(Collection::stream)
+                                    .filter(a -> knownSources.getReferencedTables().contains(a.getAssociatedEntity())),
+                                Optional.ofNullable(entity.getReferences(monitor)).stream().flatMap(Collection::stream)
+                                    .filter(r -> knownSources.getReferencedTables().contains(r.getParentObject()))
+                            ).filter(c -> c instanceof DBSTableForeignKey)
+                             .map(c -> {
+                                 try {
+                                     return ((DBSTableForeignKey) c).getAttributeReferences(new VoidProgressMonitor());
+                                 } catch (DBException e) {
+                                     return null;
+                                 }
+                             })
+                             .filter(aa -> aa != null && aa.size() == 1 && aa.get(0) instanceof DBSTableForeignKeyColumn)
+                             // TODO consider compound keys and filtered by the common path to the context of origin
+                             .map(aa -> (DBSTableForeignKeyColumn) aa.get(0))
+                             .map(attrRef -> {
+                                 DBSEntityAttribute sourceAttr = attrRef.getAttribute();
+                                 DBSEntityAttribute targetAttr = attrRef.getReferencedColumn();
+                                 if (targetAttr != null && sourceAttr != null) {
+                                     if (sourceAttr.getParentObject() == entity) {
+                                         return Pair.of(sourceAttr, targetAttr);
+                                     } else {
+                                         return Pair.of(targetAttr, sourceAttr);
+                                     }
+                                 } else {
+                                     return null;
+                                 }
+                             })
+                             .filter(Objects::nonNull)
+                             .collect(Collectors.groupingBy(Pair::getFirst, Collectors.mapping(Pair::getSecond, Collectors.toList())));
+                        } catch (DBException e) {
+                            return Collections.emptyMap();
+                        }
+                    }
                 }
-                return stream.toList();
+
+                LinkedList<SQLQueryCompletionItem> result = new LinkedList<>();
+
+                if (this.knownSources.getReferencedTables().size() > 1 && this.knownSources.getResolutionResults().size() > 1
+                    && context.deepestContext() instanceof SQLQueryCombinedContext joinContext && joinContext.isJoin()) {
+
+                    AssociationsResolutionContext associations = new AssociationsResolutionContext();
+
+                    for (SQLQueryResultColumn joinedColumn : joinContext.getRightParent().getColumnsList()) {
+                        if (joinedColumn.realAttr != null) {
+                            for (DBSEntityAttribute otherColumnAttribute : associations.findAssociations(joinedColumn.realAttr)) {
+                                List<SQLQueryCompletionItem.SQLColumnNameCompletionItem> otherColumnRefs = associations.realColumnRefsByEntityAttribute.get(otherColumnAttribute);
+                                if (otherColumnRefs != null) {
+                                    for (SQLQueryCompletionItem.SQLColumnNameCompletionItem thisColumnRef : associations.realColumnRefsByEntityAttribute.get(joinedColumn.realAttr)) {
+                                        if (thisColumnRef.columnInfo == joinedColumn) {
+                                            for (SQLQueryCompletionItem.SQLColumnNameCompletionItem otherColumnRef : otherColumnRefs) {
+                                                if (filterOrNull == null ||
+                                                    thisColumnRef.getFilterInfo().filterString.contains(filterOrNull.filterString) ||
+                                                    otherColumnRef.getFilterInfo().filterString.contains(filterOrNull.filterString)
+                                                ) {
+                                                    result.addLast(SQLQueryCompletionItem.forJoinCondition(thisColumnRef.getFilterInfo(), thisColumnRef, otherColumnRef));
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+                return result;
             }
 
             @NotNull
-            private List<SQLQueryCompletionItem> prepareColumnCompletions(@Nullable SQLQueryWordEntry filterOrNull) {
+            private SQLQueryCompletionSet prepareColumnCompletions(@NotNull DBRProgressMonitor monitor, @Nullable SQLQueryWordEntry filterOrNull) {
                 // directly available column
                 List<SQLQueryCompletionItem> subsetColumns = prepareCurrentTupleColumns(filterOrNull);
                 // already referenced tables
@@ -609,11 +688,16 @@ public abstract class SQLQueryCompletionContext {
                     } else if (rr.tableOrNull != null) {
                         SQLQueryWordEntry tableName = makeFilterInfo(filterOrNull, rr.tableOrNull.getName());
                         if (filterOrNull == null || tableName.filterString.contains(filterOrNull.filterString)) {
-                            tableRefs.add(SQLQueryCompletionItem.forRealTable(tableName, rr.tableOrNull, true));
+                            tableRefs.add(SQLQueryCompletionItem.forRealTable(tableName, null, rr.tableOrNull, true));
                         }
                     }
                 }
-                return Stream.of(subsetColumns, tableRefs).flatMap(Collection::stream).toList();
+
+                List<SQLQueryCompletionItem> joinConditions = syntaxInspectionResult.expectingJoinCondition()
+                    ? this.prepareJoinConditionCompletions(monitor, filterOrNull)
+                    : Collections.emptyList();
+
+                return this.makeFilteredCompletionSet(filterOrNull, Stream.of(subsetColumns, tableRefs, joinConditions).flatMap(Collection::stream).toList());
             }
 
             @NotNull
@@ -624,8 +708,8 @@ public abstract class SQLQueryCompletionContext {
 
             @NotNull
             private List<SQLQueryCompletionItem> prepareCurrentTupleColumns(@Nullable SQLQueryWordEntry filterOrNull) {
-                Stream<SQLQueryCompletionItem> subsetColumns = context.getColumnsList().stream()
-                    .map(rc -> SQLQueryCompletionItem.forSubsetColumn(makeFilterInfo(filterOrNull, rc.symbol.getName()), rc, this.knownSources.getResolutionResults().get(rc.source), true));
+                Stream<SQLQueryCompletionItem> subsetColumns = context.deepestContext().getColumnsList().stream()
+                    .map(rc -> SQLQueryCompletionItem.forSubsetColumn(makeFilterInfo(filterOrNull, rc.symbol.getName()), rc, this.knownSources.getResolutionResults().get(rc.source), false));
 
                 if (filterOrNull != null) {
                     subsetColumns = subsetColumns.filter(c -> c.getFilterInfo().filterString.contains(filterOrNull.filterString));
@@ -635,7 +719,7 @@ public abstract class SQLQueryCompletionContext {
             }
 
             @NotNull
-            private List<SQLQueryCompletionItem> prepareTableCompletions(
+            private SQLQueryCompletionSet prepareTableCompletions(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull SQLCompletionRequest request,
                 @Nullable SQLQueryWordEntry filterOrNull
@@ -657,28 +741,27 @@ public abstract class SQLQueryCompletionContext {
                             DBSSchema defaultSchema = defaults.getDefaultSchema();
                             DBSCatalog defaultCatalog = defaults.getDefaultCatalog();
                             if (defaultCatalog == null && defaultSchema == null && dbcExecutionContext.getDataSource() instanceof DBSObjectContainer container) {
-                                this.collectTables(monitor, container, filterOrNull, completions);
-                            } else if (request.getContext().isSearchGlobally() && defaultCatalog != null) {
-                                this.collectTables(monitor, defaultCatalog, filterOrNull, completions);
-                            } else {
-                                if (defaultSchema != null) {
-                                    this.collectTables(monitor, defaultSchema, filterOrNull, completions);
-                                }
+                                this.collectTables(monitor, container, null, filterOrNull, completions);
+                            } else if ((request.getContext().isSearchGlobally() || defaultSchema == null) && defaultCatalog != null) {
+                                this.collectTables(monitor, defaultCatalog, null, filterOrNull, completions);
+                            } else if (defaultSchema != null) {
+                                this.collectTables(monitor, defaultSchema, null, filterOrNull, completions);
                             }
                         }
 
-                        this.collectContextSchemasAndCatalogs(this.exposedContexts, monitor, filterOrNull, completions);
+                        this.collectContextSchemasAndCatalogs(monitor, this.exposedContexts, null, filterOrNull, completions);
                     } catch (DBException e) {
                         log.error(e);
                     }
                 }
                 
-                return completions;
+                return this.makeFilteredCompletionSet(filterOrNull, completions);
             }
 
             private void collectContextSchemasAndCatalogs(
-                @NotNull Collection<DBSObjectContainer> contexts,
                 @NotNull DBRProgressMonitor monitor,
+                @NotNull Collection<DBSObjectContainer> contexts,
+                @Nullable SQLQueryCompletionItem.ContextObjectInfo contextObjext,
                 @Nullable SQLQueryWordEntry filterOrNull,
                 @NotNull LinkedList<SQLQueryCompletionItem> completions
             ) throws DBException {
@@ -688,7 +771,7 @@ public abstract class SQLQueryCompletionContext {
                         if (child instanceof DBSSchema || child instanceof DBSCatalog) {
                             SQLQueryWordEntry childName = makeFilterInfo(filterOrNull, child.getName());
                             if (filterOrNull == null || childName.filterString.contains(filterOrNull.filterString)) {
-                                completions.addLast(SQLQueryCompletionItem.forDbObject(childName, child));
+                                completions.addLast(SQLQueryCompletionItem.forDbObject(childName, contextObjext, child));
                             }
                         }
                     }
@@ -698,13 +781,16 @@ public abstract class SQLQueryCompletionContext {
             private void collectTables(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull DBSObjectContainer container,
+                @Nullable SQLQueryCompletionItem.ContextObjectInfo contextObjext,
                 @Nullable SQLQueryWordEntry filterOrNull,
                 @NotNull LinkedList<SQLQueryCompletionItem> accumulator
             ) throws DBException {
                 this.collectObjectsRecursively(
                     monitor, container, new HashSet<>(), accumulator, filterOrNull,
                     List.of(DBSTable.class, DBSView.class),
-                    (e, o) -> SQLQueryCompletionItem.forRealTable(e, o, knownSources.getReferencedTables().contains(o))
+                    (e, o) -> SQLQueryCompletionItem.forRealTable(
+                        e, contextObjext, o, knownSources.getReferencedTables().contains(o)
+                    )
                 );
             }
 
@@ -716,7 +802,7 @@ public abstract class SQLQueryCompletionContext {
             ) throws DBException {
                 this.collectObjectsRecursively(
                     monitor, container, new HashSet<>(), accumulator, filterOrNull,
-                    List.of(DBSSchema.class), SQLQueryCompletionItem::forDbObject
+                    List.of(DBSSchema.class), (e, s) -> SQLQueryCompletionItem.forDbObject(e, null, s)
                 );
             }
 
@@ -728,11 +814,10 @@ public abstract class SQLQueryCompletionContext {
             ) throws DBException {
                 this.collectObjectsRecursively(
                     monitor, container, new HashSet<>(), accumulator, filterOrNull,
-                    List.of(DBSCatalog.class), SQLQueryCompletionItem::forDbObject
+                    List.of(DBSCatalog.class), (e, c) -> SQLQueryCompletionItem.forDbObject(e, null, c)
                 );
             }
 
-            @NotNull
             private <T extends DBSObject> void collectObjectsRecursively(
                 @NotNull DBRProgressMonitor monitor,
                 @NotNull DBSObjectContainer container,
@@ -756,7 +841,34 @@ public abstract class SQLQueryCompletionContext {
                     }
                 }
             }
+
+            private SQLQueryCompletionItem.ContextObjectInfo prepareContextInfo(@NotNull SQLCompletionRequest request, @NotNull List<SQLQueryWordEntry> prefix, @Nullable SQLQueryWordEntry tail, @NotNull DBSObject contextObject) {
+                if (contextObject != null) {
+                    int prefixStart = prefix.get(0).offset;
+                    int requestPosition = tail != null ? tail.offset : (requestOffset - scriptItem.offset);
+                    String prefixString = scriptItem.item.getOriginalText().substring(prefixStart, requestPosition);
+                    return new SQLQueryCompletionItem.ContextObjectInfo(prefixString, contextObject);
+                } else {
+                    return null;
+                }
+            }
         };
+    }
+
+    protected SQLQueryCompletionSet prepareKeywordCompletions(@NotNull Set<String> keywords, @Nullable SQLQueryWordEntry filterOrNull) {
+        Stream<SQLQueryCompletionItem> stream = keywords.stream().map(
+                s -> SQLQueryCompletionItem.forReservedWord(makeFilterInfo(filterOrNull, s), s)
+        );
+        if (filterOrNull != null) {
+            stream = stream.filter(s -> s.getFilterInfo().filterString.contains(filterOrNull.filterString));
+        }
+        return this.makeFilteredCompletionSet(filterOrNull, stream.toList());
+    }
+
+    protected SQLQueryCompletionSet makeFilteredCompletionSet(@Nullable SQLQueryWordEntry filterOrNull, List<? extends SQLQueryCompletionItem> items) {
+        int replacementPosition = filterOrNull == null ? this.getRequestOffset() : this.getOffset() + filterOrNull.offset;
+        int replacementLength = this.getRequestOffset() - replacementPosition;
+        return new SQLQueryCompletionSet(replacementPosition, replacementLength, items);
     }
 
     @NotNull
